fix input-group whitespace problem

--- a/assets/styles/class.scss
+++ b/assets/styles/class.scss
@@ -8,12 +8,16 @@
 
 // class for fade transition
 .fade-enter-active,
-.fade-leave-active {
+.fade-leave-active,
+.page-enter-active,
+.page-leave-active {
   transition: opacity var.$animation-time;
 }
 
 .fade-enter,
 .fade-leave-to,
+.page-enter,
+.page-leave-to,
 .fade-ep-enter,
 .fade-ep-leave-to {
   @extend %opacity-zero;
@@ -39,94 +43,12 @@
   transform: translateX(100%);
 }
 
-// up
-.up-enter-active,
-.up-leave-active,
-.up-long-enter-active {
-  @extend %opacity-and-transform;
-}
-
-.up-enter,
-.up-leave-to,
-.up-long-enter {
-  @extend %opacity-zero;
-}
-
-.up-enter {
-  transform: translateY(5%);
-}
-
-.up-long-enter {
-  transform: translateY(100%);
-}
-
-.up-leave-to {
-  transform: translateY(-5%);
-}
-
-// down
-.down-enter-active,
-.down-leave-active {
-  @extend %opacity-and-transform;
-}
-
-.down-enter,
-.down-leave-to {
-  @extend %opacity-zero;
-}
-
-.down-enter {
-  transform: translateY(-5%);
-}
-
-.down-leave-to {
-  transform: translateY(5%);
-}
-
-//right
-.right-enter-active,
-.right-leave-active {
-  @extend %opacity-and-transform;
-}
-
-.right-enter,
-.right-leave-to {
-  @extend %opacity-zero;
-}
-
-.right-enter {
-  transform: translateX(5%);
-}
-
-.right-leave-to {
-  transform: translateX(-5%);
-}
-
-//left
-.left-enter-active,
-.left-leave-active {
-  @extend %opacity-and-transform;
-}
-
-.left-enter,
-.left-leave-to {
-  @extend %opacity-zero;
-}
-
-.left-enter {
-  transform: translateX(-5%);
-}
-
-.left-leave-to {
-  transform: translateX(5%);
-}
-
 .flip-list-move {
   transition: transform var.$animation-time;
 }
 
 .v-lazy-image {
-  filter: blur(5px);
+  filter: blur(20px);
   transition: filter var.$animation-time;
   will-change: filter;
 }
