--- a/assets/styles/component.scss
+++ b/assets/styles/component.scss
@@ -218,6 +218,7 @@ textarea {
 }
 
 .input-group {
+  font-size: 0;
   & > * {
     position: relative;
     z-index: 0;
